2021-08-24 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Moved common system to C++ file
	
2021-08-22 Dusan Jocic <dusanjocic@msn.com>
	* [Console] Added Timestamps to in-game console
	* [Console] Add chatlogs to engine

2021-08-21 Dusan Jocic <dusanjocic@msn.com>
	* [Console] Improved engine console copying into system os clipboard
	* [Console] Add possibility to copy engine console into system os clipboard

2021-08-20 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2021-07-22 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Added foliage surface

2021-07-18 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Misc fixes
	* [Mac] Some work to get Macintosh build fixed
	* [Mac] More work for Macintosh build

2021-07-04 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Misc changes
	* [Filesystem] Introduced "fs_texturesfolder", "fs_soundsFolder" and "fs_modelsFolder"
	* [Misc] Misc changes
	* [RenderSystem] Fixed external lightmaps

2021-06-14 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Renderer dynamic module should have dot (.) before arch
	* [Engine] Early out of idCmdSystemLocal::CompleteArgument and idCmdSystemLocal::SetCommandCompletionFunc
	* [Engine] Fixed few memory leaks
	* [Engine] Reworked console key detection to use the sdl scancode instead of the keycode

2021-06-13 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Fixed blended of texture detail
	* [RenderSystem] Fixed problems with parallax
	* [RenderSystem] Fixed problems with Sun rays
	* [Misc] Misc changes

2021-06-06 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Misc changes

2021-06-01 Dusan Jocic <dusanjocic@msn>
	* [Linux] Fixed compiling on the Linux platform
	* [GLSL] Misc fixes
    
2021-05-30 Dusan Jocic <dusanjocic@msn>
	* [Server] Fixed crash

2021-05-23 Dusan Jocic <dusanjocic@msn>
    * [Linux] Fixed compiling on the Linux platform
	* [Engine] Moved memory system to C++ file
	* [RenderSystem] Moved renderer system to dynamic module